# yhmt

./: .coverage  .python-version  README.md  noxfile.py  pyproject.toml
src/yhmt/: __init__.py  console.py  wikipedia.py
tests/: test_console.py
