[tool.poetry]
name = "yhmt"
version = "0.1.0"
description = ""
authors = ["Yannick Martel <ymartel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.8"
requests = "^2.32.3"
nox = "^2024.10.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
coverage = {extras = ["toml"], version = "^7.6.10"}
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yhmt = "yhmt.console:main"


